[gd_scene load_steps=19 format=3 uid="uid://bh4wxl3845tf6"]

[ext_resource type="Theme" uid="uid://cwif4cu3aua73" path="res://assets/resources/battle.tres" id="1_p041d"]
[ext_resource type="Script" path="res://scripts/stats.gd" id="2_i87f1"]
[ext_resource type="Texture2D" uid="uid://b6lqfvu4mrg2o" path="res://assets/art/backgrounds/clouds.png" id="2_n1ffu"]
[ext_resource type="Texture2D" uid="uid://dqk7wnixnhraj" path="res://assets/art/animations/main_menu/background.png" id="3_iwveo"]
[ext_resource type="Texture2D" uid="uid://dvmwx0xj0na6s" path="res://assets/art/animations/main_menu/foreground.png" id="4_7q7eu"]
[ext_resource type="Texture2D" uid="uid://nttw37a28h3i" path="res://assets/art/animations/main_menu/animated_part.png" id="5_iqmy8"]
[ext_resource type="AudioStream" uid="uid://cbgpujpmy7vfi" path="res://assets/sounds/sfx/item_get.wav" id="7_iw27h"]
[ext_resource type="Texture2D" uid="uid://tiwm7lw0in3b" path="res://assets/art/ui/ui_elements.png" id="7_lx24j"]

[sub_resource type="Shader" id="Shader_norfy"]
code = "shader_type canvas_item;

void vertex() {
	UV.x -= TIME * 0.025;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vysak"]
shader = SubResource("Shader_norfy")

[sub_resource type="AtlasTexture" id="AtlasTexture_3mqks"]
atlas = ExtResource("5_iqmy8")
region = Rect2(0, 0, 386, 214)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebipp"]
atlas = ExtResource("5_iqmy8")
region = Rect2(386, 0, 386, 214)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jhyv"]
atlas = ExtResource("5_iqmy8")
region = Rect2(772, 0, 386, 214)

[sub_resource type="AtlasTexture" id="AtlasTexture_706g7"]
atlas = ExtResource("5_iqmy8")
region = Rect2(1158, 0, 386, 214)

[sub_resource type="AtlasTexture" id="AtlasTexture_umiu5"]
atlas = ExtResource("5_iqmy8")
region = Rect2(1544, 0, 386, 214)

[sub_resource type="SpriteFrames" id="SpriteFrames_irkw6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mqks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebipp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jhyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_706g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umiu5")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_o8faq"]
atlas = ExtResource("7_lx24j")
region = Rect2(176, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvo3b"]
atlas = ExtResource("7_lx24j")
region = Rect2(192, 16, 16, 16)

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p041d")
script = ExtResource("2_i87f1")

[node name="BG" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BG"]
layout_mode = 2
color = Color(0.254902, 0.690196, 0.996078, 1)

[node name="Clouds" type="Sprite2D" parent="BG"]
texture_repeat = 2
material = SubResource("ShaderMaterial_vysak")
position = Vector2(481, 149)
scale = Vector2(3.18391, 5.10417)
texture = ExtResource("2_n1ffu")

[node name="Background" type="TextureRect" parent="BG"]
layout_mode = 2
texture = ExtResource("3_iwveo")

[node name="Clouds2" type="Sprite2D" parent="BG"]
texture_repeat = 2
material = SubResource("ShaderMaterial_vysak")
position = Vector2(540, 439)
scale = Vector2(7.31001, 2.89583)
texture = ExtResource("2_n1ffu")

[node name="Foreground" type="TextureRect" parent="BG"]
layout_mode = 2
texture = ExtResource("4_7q7eu")

[node name="MarginContainer2" type="MarginContainer" parent="BG"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Animated" type="AnimatedSprite2D" parent="BG/MarginContainer2"]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_irkw6")
autoplay = "default"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ReadingLabel" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "READING:"

[node name="Reading" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "NO DATA"

[node name="PhonemicAwarenessLabel" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PHONEMIC AWARENESS:"

[node name="PhonemicAwareness" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "NO DATA"

[node name="ReadingComprehensionLabel" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "READING COMPREHENSION:"

[node name="ReadingComprehension" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "NO DATA"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer/GridContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/GridContainer/PanelContainer"]
layout_mode = 2

[node name="SkippedWordsLabel" type="Label" parent="MarginContainer/GridContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "SKIPPED WORDS:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/GridContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_deadzone = 10

[node name="SkippedWordsContainer" type="GridContainer" parent="MarginContainer/GridContainer/GridContainer/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/GridContainer/PanelContainer/VBoxContainer/ScrollContainer/SkippedWordsContainer"]
layout_mode = 2
text = "NO DATA"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/GridContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="RecentlyReadWordLabel" type="Label" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Recently Read Word: "

[node name="RecentlyReadWord" type="Label" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "NO DATA"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="RecentlyLearnedWordLabel" type="Label" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Recently Learned Word:"

[node name="RecentlyLearnedWord" type="Label" parent="MarginContainer/GridContainer/GridContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "NO DATA"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 130.0

[node name="BackButton" type="TextureButton" parent="MarginContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_o8faq")
texture_pressed = SubResource("AtlasTexture_lvo3b")
stretch_mode = 5

[node name="PauseMusic" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_iw27h")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer2/BackButton" to="." method="_on_back_button_pressed"]
